<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="name_edittext">Name</string>
    <string name="topping_textview">toppings</string>
    <string name="whipped_cream_checkbox">Whipped Cream</string>
    <string name="chocolate_checkbox">Chocolate</string>
    <string name="quantity_textview">quantity</string>
    <string name="order_button">order</string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g> cups</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%s</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate?<xliff:g id="addChocolate" example="true">%s</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="order_summary_email_subject">Just Java to <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
