<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <EditText
                android:id="@+id/name_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:hint="@string/name_edittext"
                android:inputType="textCapWords"/>
        </LinearLayout>

        <TextView
            android:id="@+id/topping_textview"

            style="@style/HeaderTextStyle"

            android:paddingBottom="16dp"

            android:text="@string/topping_textview" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="24dp"

            android:text="@string/whipped_cream_checkbox"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"

            android:text="@string/chocolate_checkbox"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/quantity_textview"

            style="@style/HeaderTextStyle"


            android:text="@string/quantity_textview" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"

            android:orientation="horizontal">

            <Button
                android:id="@+id/dec_quantity_button"

                android:layout_width="48dp"
                android:layout_height="48dp"

                android:onClick="decrementQuantity"

                android:text="-"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/quantity_number_textview"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingLeft="8dp"
                android:paddingRight="8dp"

                android:text="-X-"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/inc_quantity_button"

                android:layout_width="48dp"
                android:layout_height="48dp"


                android:onClick="incrementQuantity"


                android:text="+"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/order_button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"

            android:onClick="submitOrder"

            android:text="@string/order_button"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

    </LinearLayout>


</ScrollView>

